<!--
  ~   Copyright (C) 2017  Shivang<shivang.iitk@gmail.com>
  ~
  ~   This file is part of Firebase Database Manager.
  ~
  ~       Firebase Database Manager is free software: you can redistribute it and/or modify
  ~       it under the terms of the GNU General Public License as published by
  ~       the Free Software Foundation, either version 3 of the License, or
  ~       (at your option) any later version.
  ~
  ~       Firebase Database Manager is distributed in the hope that it will be useful,
  ~       but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~       GNU General Public License for more details.
  ~
  ~       You should have received a copy of the GNU General Public License
  ~       along with Firebase Database Manager.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="access">Access</string>
    <string name="firebase_base_url">Firebase Base URL</string>
    <string name="https_fir_databasecontrol_firebaseio_com">https://example.firebaseio.com/</string>
    <string name="go">Go</string>
    <string name="base_url_init">https://.firebaseio.com</string>
    <string name="note">Note: For firebase with rule set not public, use your google credentials to get firebase project secret.</string>
    <string name="help">Help</string>
    <string name="welcome">Welcome</string>
    <string name="message_slide_one">This app is exclusively made for
        firebase user and developer</string>
    <string name="exit">Exit</string>
    <string name="value">Value :</string>
    <string name="currently_unavailable">JSON type is current unavailable</string>
    <string name="true_value">True</string>
    <string name="false_value">False</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="put">Put</string>
    <string name="post">Post</string>
    <string name="open">Open</string>
    <string name="no_node_here">No node here!</string>
    <string name="internet_problem">Check your internet</string>
    <string name="nest">Nest</string>
    <string name="patch">PATCH</string>
    <string name="action">Action</string>
    <string name="home">Home</string>
    <string name="export">Export</string>
    <string name="choose_file_name">Choose file name</string>
    <string name="local_database">Local Database</string>
    <string name="value_">Value</string>
    <string name="choose_key">Choose key</string>
    <string name="error_loading_value">Error Loading Value</string>
    <string name="get_pro">Get Pro</string>
    <string name="url_paid_version">https://play.google.com/store/apps/details?id=com.shivang.databasemanager.paid</string>
    <string name="connection_error">Check Internet Connection</string>
    <string name="server_error">Server Error</string>
    <string name="error">error</string>
    <string name="clear_auth">Clear Auth</string>
    <string name="clear_last_url">Clear Last Url</string>


    <array name="value_type">
        <item>String</item>
        <item>Integer</item>
        <item>Boolean</item>
    </array>

    <array name="bool_value">
        <item>@string/true_value</item>
        <item>@string/false_value</item>
    </array>

</resources>
