<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            style="@style/buttonStyle"
            android:layout_margin="10dp"
            android:text="@string/patch"
            android:id="@+id/bt_patch"
            />
        <Button
            style="@style/buttonStyle"
            android:layout_margin="10dp"
            android:text="@string/post"
            android:id="@+id/bt_home"
            />
        <Button
            style="@style/buttonStyle"
            android:layout_margin="10dp"
            android:text="@string/put"
            android:id="@+id/bt_action"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            style="@style/buttonStyle"
            android:layout_margin="10dp"
            android:text="@string/delete"
            android:id="@+id/bt_delete"
            />
        <Button
            style="@style/buttonStyle"
            android:layout_margin="10dp"
            android:text="@string/export"
            android:id="@+id/bt_export"
            />
    </LinearLayout>
</LinearLayout>