<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2016  Shivang
 *
 * This file is part of Firebase Database Manager.
 *
 *     Firebase Database Manager is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     Firebase Database Manager is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 *     along with Firebase Database Manager.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@android:color/white"
        android:id="@+id/ll_key"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:background="@drawable/border_rectangle"
            android:id="@+id/et_key"
            android:hint="@string/choose_key"
            android:inputType="textUri" />
        <Button
            android:layout_width="70sp"
            android:layout_height="35dp"
            android:text="@string/nest"
            android:id="@+id/bt_sub_node"
            />
        <Button
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:text="@string/value_"
            android:id="@+id/bt_value"
            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:id="@+id/list"
        />


</LinearLayout>